--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
     "tasks": {
-        "dev": "deno run --allow-all --watch index.ts"
+        "dev": "deno run --allow-all --watch=repl/index.ts index.ts"
     }
 }
