--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
     "tasks": {
         "dev": "deno run --allow-all --watch=repl/index.ts index.ts",
-        "build": "deno compile --allow-read --allow-write --allow-run index.ts"
+        "build": "deno compile --allow-read --allow-write --allow-run --allow-env index.ts"
     }
 }
